[folder view] Select newly-created items

Like Dolphin does.

BUG: 434513
FIXED-IN: 5.22